Fixed missed double vignette.tooltip"
Btw, maybe you missed some keys in en_us, these are "Blocks" "Chunks" "Advanced" "V-Sync" or forgot to add them. So I don't see them in the file. I can show you in Discord. DrHesperus#2411

--- a/src/main/resources/assets/sodium/lang/ru_ru.json
+++ b/src/main/resources/assets/sodium/lang/ru_ru.json
@@ -1,5 +1,5 @@
 {
-"sodium.option_impact.low":  "Низкое",
+"sodium.option_impact.low": "Низкое",
 "sodium.option_impact.medium": "Среднее",
 "sodium.option_impact.high": "Высокое",
 "sodium.option_impact.extreme": "Экстремальное",
@@ -32,7 +32,7 @@
 "sodium.options.biome_blend.tooltip": "Управляет дальностью, из которого будут отбираться биомы для раскрашивания блока. Наивысшее значение существенно увеличивает количество времени, которое уходит на построение кусков для улучшения положения в качестве.",
 "sodium.options.entity_distance.tooltip": "Управляет как далеко объекты будут визуализироваться от игрока. Наивысшее значение увеличит расстояние визуализации за счёт частоты кадров.",
 "sodium.options.entity_shadows.tooltip": "Если включены, основные тени будут визуализироваться под монстрами и другими объектами.",
-"sodium.options.vignette.tooltip": "Виньетка",
+"sodium.options.vignette.name": "Виньетка",
 "sodium.options.vignette.tooltip": "Если включена, эффект виньетки будет отображаться в поле зрения игрока. Это очень маловероятно, чтобы изменить ситуацию в частоте кадров, если только ты не ограничиваешься в их скорости заполнения.",
 "sodium.options.mipmap_levels.tooltip": "Управляет числом MIP-текстурирование, которое будет использовано для текстур модели блока. Наивысшее значение обеспечивает лучшую визуализацию блоков на расстоянии, но может отрицательно сказаться на производительность с множеством анимированных текстур.",
 "sodium.options.chunk_renderer.name": "Использовать мультипроцессорную отрисовку кусков",
